<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".StudentDashboardActivity">

    <Button
        android:id="@+id/Student_Dashboard_btn_Sign_Out"
        android:layout_width="225dp"
        android:layout_height="55dp"
        android:text="@string/Sign_Out_Btn"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView4" />

    <TextView
        android:id="@+id/HI_Student"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/Dashboard_hi"

        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Application_Name" />

    <TextView
        android:id="@+id/Student_Dashboard_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/Student_Dashboard_NameCall"

        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Application_Name" />

    <Button
        android:id="@+id/Student_Dashboard_NotificationBell"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:text="@string/Dashboard_Notification"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Application_Name" />

    <Button
        android:id="@+id/Student_Dashboard_EditProfile"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="184dp"
        android:text="@string/Dashboard_EditProfile"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Application_Name" />

    <ImageView
        android:id="@+id/Application_Logo"
        android:layout_width="183dp"
        android:layout_height="199dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/bg_edtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Application_Name"
        app:srcCompat="@drawable/doctor512px" />

    <TextView
        android:id="@+id/Application_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/app_name"
        android:textColor="@color/heading"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="410dp"
        android:layout_height="500dp"
        android:layout_marginTop="292dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Application_Name">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <!-- Row 1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp">

                <!-- Button 1 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp">

                    <ImageButton
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:src="@drawable/appointment"
                        android:contentDescription="@string/Dashboard_hi"
                        android:onClick="scheduleAppointment"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/STD_Appointment"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>

                <!-- Button 2 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp">

                    <ImageButton
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:src="@drawable/sick"
                        android:contentDescription="@string/Dashboard_hi"
                        android:onClick="scheduleAppointment"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/STD_Symptoms"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>

            </LinearLayout>

            <!-- Row 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp">

                <!-- Button 3 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp">

                    <ImageButton
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:src="@drawable/newspaper"
                        android:contentDescription="@string/Dashboard_hi"
                        android:onClick="scheduleAppointment"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/STD_Articles"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>

                <!-- Button 4 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp">

                    <ImageButton
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:src="@drawable/ambulance"
                        android:contentDescription="@string/Dashboard_hi"
                        android:onClick="scheduleAppointment"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/STD_Emergency"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>

            </LinearLayout>

            <!-- Row 3 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp">

                <!-- Button 5 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp">

                    <ImageButton
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:contentDescription="@string/Dashboard_hi"
                        android:onClick="scheduleAppointment"
                        android:src="@drawable/safety" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/STD_HealthTips"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>

                <!-- Button 6 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp">

                    <ImageButton
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:src="@drawable/chat"
                        android:contentDescription="@string/Dashboard_hi"
                        android:onClick="scheduleAppointment"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/STD_Chat"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>